[package]
name = "bt_crack"
version = "0.0.1"
edition = "2021"

[lib]
name = "bt_crack"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.22.3"
features = ["extension-module"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
	"derive",
] }
sp_core = { package = "sp-core", version = "34.0.0", default-features = false, features = [
	"std",
] }
itertools = { version = "0.13.0" }
permutations = { version = "0.1.1" }
