[project]
name = "bt-crack"
version = "0.0.1b"
description = "Attempt to crack the mnemonic"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["substrate", "bittensor", "crypto"]

dependencies = ["toml==0.10.0", "tqdm==4.67.1", "substrate-interface==1.7.11"]
requires-python = ">= 3.9"

authors = [
  {name = "Cameron Fairchild", email = "cameron@opentensor.dev"},
]
maintainers = [
  {name = "Cameron Fairchild", email = "cameron@opentensor.dev"}
]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Build Tools",
        # Pick your license as you wish
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project.optional-dependencies]
dev = ["black==23.7.0","maturin", "ruff==0.4.7"]
test = [
    "bittensor==7.3.1",
    "pytest==7.2.0",
    "pytest-asyncio==0.23.7",
    "pytest-mock==3.12.0",
    "pytest-split==0.8.0",
    "pytest-xdist==3.0.2",
    "pytest-rerunfailures==10.2",
    "ddt==1.6.0",
]